Revision history for Perl extension Web-Library-Bootstrap

0.03 Sat May 18 12:05:20 2013 CEST
    [New Features]
        - Includes Bootstrap 2.3.2

0.02 Fri May 17 12:35:00 2013 CEST
    [Improvements]
        - t/basic.t uses Web::Library::Test

0.01 Thu May  2 11:42:35 2013 CEST
    [New Features]
        - original version