@@ -1,31 +1,0 @@
-Changes
-lib/Web/Library/Bootstrap.pm
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README.md
-share/2.3.0/css/bootstrap-responsive.css
-share/2.3.0/css/bootstrap-responsive.min.css
-share/2.3.0/css/bootstrap.css
-share/2.3.0/css/bootstrap.min.css
-share/2.3.0/img/glyphicons-halflings-white.png
-share/2.3.0/img/glyphicons-halflings.png
-share/2.3.0/js/bootstrap.js
-share/2.3.0/js/bootstrap.min.js
-share/2.3.1/css/bootstrap-responsive.css
-share/2.3.1/css/bootstrap-responsive.min.css
-share/2.3.1/css/bootstrap.css
-share/2.3.1/css/bootstrap.min.css
-share/2.3.1/img/glyphicons-halflings-white.png
-share/2.3.1/img/glyphicons-halflings.png
-share/2.3.1/js/bootstrap.js
-share/2.3.1/js/bootstrap.min.js
-share/2.3.2/css/bootstrap-responsive.css
-share/2.3.2/css/bootstrap-responsive.min.css
-share/2.3.2/css/bootstrap.css
-share/2.3.2/css/bootstrap.min.css
-share/2.3.2/img/glyphicons-halflings-white.png
-share/2.3.2/img/glyphicons-halflings.png
-share/2.3.2/js/bootstrap.js
-share/2.3.2/js/bootstrap.min.js
-t/basic.t
