@@ -1,0 +1,67 @@
+{
+   "abstract" : "Distribution wrapper around Bootstrap",
+   "author" : [
+      "The following person is the author of all the files provided in"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Milla version v1.0.3, Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Web-Library-Bootstrap",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples"
+      ]
+   },
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "Test::More" : "0.94"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "Module::Build::Tiny" : "0.025"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::Pod" : "1.41"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Moose" : "0",
+            "Web::Library" : "0.02",
+            "perl" : "5.012000"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/marcelgruenauer/Web-Library-Bootstrap/issues"
+      },
+      "homepage" : "https://github.com/marcelgruenauer/Web-Library-Bootstrap",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/marcelgruenauer/Web-Library-Bootstrap.git",
+         "web" : "https://github.com/marcelgruenauer/Web-Library-Bootstrap"
+      }
+   },
+   "version" : "0.03",
+   "x_contributors" : [
+      "Marcel Gruenauer <hanekomu@gmail.com>"
+   ]
+}
+
