@@ -1,0 +1,7 @@
+requires 'Moose';
+requires 'Web::Library', '0.02';
+requires 'perl', '5.012000';
+
+on build => sub {
+    requires 'Test::More', '0.94';
+};
